--- a/app/global.scss
+++ b/app/global.scss
@@ -1,3 +1,7 @@
+// @import 'leaflet/dist/leaflet.scss';
+// @import 'leaflet-defaulticon-compatibility/dist/leaflet-defaulticon-compatibility.scss';
+// @import 'leaflet-defaulticon-compatibility';
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -37,4 +41,10 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.leaflet-popup-content-wrapper,
+.leaflet-popup-tip {
+  background-color: red;
+  color: white;
 }
